--- a/moreprojects.html
+++ b/moreprojects.html
@@ -863,7 +863,42 @@
                     </div>
                 </div>
             </div>
-
+                <!-- proyecto 3 -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="built/img/CotizadorReactJS.png alt="Imagen proyecto 1">
+                        <div class="overlay">
+                            <p>Budget Quote - React - Tawilwind</p>
+                            <div class="iconos-contenedor">
+                                <a href="https://github.com/jakefernandez102/Cotizador-React-Context-Tailwind" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="https://playful-palmier-cca7ab.netlify.app" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi bi-browser-chrome"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <!-- proyecto 3 -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="built/img/PipesUse.png" alt="Imagen proyecto 1">
+                        <div class="overlay">
+                            <p>Climate app - React - Tailwind</p>
+                            <div class="iconos-contenedor">
+                                <a href="https://github.com/jakefernandez102/Climate-ReactJS-Tailwind/tree/main" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="https://amazing-gnome-958258.netlify.app" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi bi-browser-chrome"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
  <div class="row container-fluid">
                 <h4 class="seccion-titulo mt-3 mb-3">Projects created using Angular
                 </h4>
@@ -921,6 +956,7 @@
                     </div>
                 </div>
             </div>
+               
 
             <!-- <div class="row container-fluid">
                 <h4 class="seccion-titulo mt-3 mb-3">Projects created using NodeJs <small>~ Web inc MVC - REST APIs
