--- a/moreprojects.html
+++ b/moreprojects.html
@@ -884,7 +884,7 @@
                 <!-- proyecto 3 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="built/img/PipesUse.png" alt="Imagen proyecto 1">
+                        <img src="built/img/ClimateReactJS.png" alt="Imagen proyecto 1">
                         <div class="overlay">
                             <p>Climate app - React - Tailwind</p>
                             <div class="iconos-contenedor">
