--- a/moreprojects.html
+++ b/moreprojects.html
@@ -866,7 +866,7 @@
                 <!-- proyecto 3 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="built/img/CotizadorReactJS.png alt="Imagen proyecto 1">
+                        <img src="built/img/CotizadorReactJS.png" alt="Imagen proyecto 1">
                         <div class="overlay">
                             <p>Budget Quote - React - Tawilwind</p>
                             <div class="iconos-contenedor">
