--- a/moreprojects.html
+++ b/moreprojects.html
@@ -891,7 +891,7 @@
                                 <a href="https://github.com/jakefernandez102/Climate-ReactJS-Tailwind/tree/main" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
-                                <a href="https://amazing-gnome-958258.netlify.app" target="_blank" rel="noopener noreferrer">
+                                <a href="https://fastidious-sawine-e1bf89.netlify.app" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-browser-chrome"></i>
                                 </a>
                             </div>
