Adding new React Projects

--- a/index.html
+++ b/index.html
@@ -175,6 +175,42 @@
             <!-- galeria de proyectos -->
             <div class="container text-center proyecto-contenedor"">
                 <div class=" row">
+                 <!-- proyecto 5 -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="built/img/CoffeeQuioscoNextJs.png" alt="Imagen proyecto 1">
+                        <div class="overlay">
+                            <p>Coffee Quiosco - NextJS</p>
+                            <div class="iconos-contenedor">
+                                <a href="https://github.com/jakefernandez102/QuiscoApp" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="https://quisco-app.vercel.app" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <i class="bi bi-browser-chrome"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                 <!-- proyecto 3 -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="built/img/GuitarLA-React-Remix.png" alt="Imagen proyecto 1">
+                        <div class="overlay">
+                            <p>GuitarLA-Remix-Strapi</p>
+                            <div class="iconos-contenedor">
+                                <a href="https://github.com/jakefernandez102/GuitarLA-React-Remix-Strapi" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi bi-github"></i>
+                                </a>
+                                <a href="https://guitar-la-react-remix-strapi.vercel.app" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi bi-browser-chrome"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- proyecto 1 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
@@ -232,42 +268,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- proyecto 3 -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="proyecto">
-                        <img src="built/img/GuitarLA-React-Remix.png" alt="Imagen proyecto 1">
-                        <div class="overlay">
-                            <p>GuitarLA-Remix-Strapi</p>
-                            <div class="iconos-contenedor">
-                                <a href="https://github.com/jakefernandez102/GuitarLA-React-Remix-Strapi" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-github"></i>
-                                </a>
-                                <a href="https://guitar-la-react-remix-strapi.vercel.app" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-browser-chrome"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- proyecto 5 -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="proyecto">
-                        <img src="built/img/RecipesAPIbg.png" alt="Imagen proyecto 1">
-                        <div class="overlay">
-                            <p>Recipes API</p>
-                            <div class="iconos-contenedor">
-                                <a href="https://github.com/jakefernandez102/RecipesSearcher.git" target="_blank"
-                                    rel="noopener noreferrer">
-                                    <i class="bi bi-github"></i>
-                                </a>
-                                <a href="https://recipessearcherjakefernandez.netlify.app/" target="_blank"
-                                    rel="noopener noreferrer">
-                                    <i class="bi bi-browser-chrome"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               
                 <!-- proyecto 6 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
