--- a/moreprojects.html
+++ b/moreprojects.html
@@ -862,7 +862,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
                 <!-- proyecto 3 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
@@ -880,7 +879,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
                 <!-- proyecto 3 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
@@ -898,6 +896,44 @@
                         </div>
                     </div>
                 </div>
+                    <!-- proyecto 5 -->
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="proyecto">
+                            <img src="built/img/CoffeeQuioscoNextJs.png" alt="Imagen proyecto 1">
+                            <div class="overlay">
+                                <p>Coffee Quiosco - NextJS</p>
+                                <div class="iconos-contenedor">
+                                    <a href="https://github.com/jakefernandez102/QuiscoApp" target="_blank"
+                                        rel="noopener noreferrer">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+                                    <a href="https://quisco-app.vercel.app" target="_blank"
+                                        rel="noopener noreferrer">
+                                        <i class="bi bi-browser-chrome"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- proyecto 5 -->
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="proyecto">
+                            <img src="built/img/CocktailReact.png" alt="Imagen proyecto 1">
+                            <div class="overlay">
+                                <p>CocktailApp Vite/TailwindCss</p>
+                                <div class="iconos-contenedor">
+                                    <a href="https://github.com/jakefernandez102/Cocktail-app" target="_blank"
+                                        rel="noopener noreferrer">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+                                    <a href="https://storied-salmiakki-9b3ac1.netlify.app" target="_blank"
+                                        rel="noopener noreferrer">
+                                        <i class="bi bi-browser-chrome"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
  <div class="row container-fluid">
                 <h4 class="seccion-titulo mt-3 mb-3">Projects created using Angular
